kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-deployment
  namespace: homework
  labels:
    app: kubernetes-controllers
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-pod
  template:
    metadata:
      labels:
        app: nginx-pod
    spec:
      containers:
        - name: nginx
          image: nginx:1.28.0-alpine
          ports:
            - containerPort: 8000
              name: nginx-port
          readinessProbe:
            httpGet:
              path: /index.html
              port: nginx-port
            initialDelaySeconds: 5
            failureThreshold: 5
            periodSeconds: 5
          volumeMounts:
            - name: workdir
              mountPath: "/homework"
            - name: config-file
              mountPath: /etc/nginx/conf.d/server.conf
          lifecycle:
            preStop:
              exec:
                command:
                  - rm
                  - -f
                  - /homework/index.html
      volumes:
        - name: workdir
          emptyDir:
            sizeLimit: 50Mi
            medium: Memory
        - name: config-file
          hostPath:
            path: /tmp/server.conf
            type: FileOrCreate
      nodeSelector:
        homework: "true"

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
