kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: homework
  labels:
    app: kubernetes-nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx-pod
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: nginx-port
