kubernetes-networks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: homework
  labels:
    app: kubernetes-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: homework.otus
      http:
        paths:
          - path: /homepage(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-service
                port:
                  name: http
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nginx-service
                port:
                  name: http
